<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nm.droid.com.numericalmethods.singleequation.SingleEquationInputActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:windowSoftInputMode="adjustPan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="nm.droid.com.numericalmethods.singleequation.SingleEquationInputActivity">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/card_method"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/syntax_tip"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:lineSpacingExtra="4dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="#424242"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/button_jump_to_faq"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:drawableEnd="@drawable/ic_open_in_new_black_24dp"
                        android:drawablePadding="8dp"
                        android:text="@string/jump_to_faq"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/syntax_tip" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_reciprocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:switchTextAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/switch_reciprocal"
                android:textColor="#424242"
                android:textSize="16sp" />

            <ViewSwitcher
                android:id="@+id/view_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:animateLayoutChanges="true"
                android:inAnimation="@android:anim/slide_in_left"
                android:outAnimation="@android:anim/slide_out_right">

                <LinearLayout
                    android:id="@+id/view_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edit_text_function"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_function_hint"
                        android:inputType="textVisiblePassword"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelText="@string/input_function_label" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edit_text_interval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:digits="0123456789-,. "
                        android:hint="@string/input_interval_hint"
                        android:inputType="numberDecimal|number|numberSigned"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        app:met_floatingLabel="highlight" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_reciprocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edit_text_reciprocal_of"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_reciprocal_of_hint"
                        android:inputType="numberDecimal|number|numberSigned"
                        android:digits="0123456789.-"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        app:met_floatingLabel="highlight" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edit_text_reciprocal_initial_approximation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:inputType="numberDecimal|number|numberSigned"
                        android:digits="0123456789.-"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:hint="@string/input_reciprocal_initial_approximation_hint"
                        app:met_floatingLabel="highlight" />

                </LinearLayout>

            </ViewSwitcher>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_text_precision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:hint="@string/input_precision_hint"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_interval"
                app:met_floatingLabel="highlight" />

            <Button
                android:id="@+id/button_calculate"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/button_calculate" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>